# gwget

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.in  gwget.desktop.in  gwget.doap
data/: GNOME_Gwget.server.in.in  Makefile.am  about.glade  gwget.desktop.in.in  gwget.glade  gwget.schemas.in  gwget.ui  newdownload.glade  preferences.glade  preferences.ui
epiphany-extension/: .cvsignore  Makefile.am  ephy-gwget-extension.c  ephy-gwget-extension.h  ephy-gwget.c  gwget.xml.in.in
include/: Makefile.am  gwget_data.h  main_window.h  main_window_cb.h  new_window.h  systray.h  utils.h  wget-log.h
pixmaps/: Makefile.am  download32x32.xpm  gwget.xpm  waiting32x32.xpm
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gwget.pot  gwget2.pot  he.po  hu.po  it.po  ja.po  lt.po  lv.po  mk.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  (+10 more)
src/: GNOME_Gwget.idl  Makefile.am  eggtrayicon.c  gwget-application-server.c  gwget-application-server.h  gwget-application-service.xml  gwget-application.c  gwget-application.h  gwget-marshal.list  gwget_data.c  gwget_data.h  main.c  main_window.c  main_window.h  main_window_cb.c  main_window_cb.h  new_window.c  new_window.h  systray.c  utils.c  utils.h  wget-log.c
