dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta - will be overwritten
dnl If you don't want it to overwrite it,
dnl 	Please disable it in the Anjuta project configuration

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gwget, 0.90)
AM_CONFIG_HEADER(config.h)

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AC_PROG_INTLTOOL([0.11])

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

LIBGNOMEUI_REQUIRED=2.0.0
LIBGNOME_REQUIRED=2.0.0
GTK_REQUIRED=2.4.0
LIBGLADE_REQUIRED=2.0.0
GCONF_REQUIRED=1.1.11

PKG_CHECK_MODULES(GNOME, libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED
		 	  gtk+-2.0 	>= $GTK_REQUIRED 
			  libglade-2.0 	>= $LIBGLADE_REQUIRED)

AC_SUBST(GNOME_LIBS)
AC_SUBST(GNOME_CFLAGS)

GETTEXT_PACKAGE=gwget
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])
dnl Languages which your application supports
ALL_LINGUAS="bg cs en_CA es eu fi fr hu ja lt mk nl pa pl pt pt_BR ro ru tr zh_TW"
AM_GLIB_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

if test "x${prefix}" = "xNONE"; then
	AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${ac_default_prefix}/share/pixmaps", [Gnome pixmap directory])
else
	AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps", [Gnome pixmap directory])
fi
		                                                                                                                                                                   
if test "x${prefix}" = "xNONE"; then
	AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [pixmaps directory])
	pixmapsdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
else
	AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [pixmaps directory])
	pixmapsdir="${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
fi
				                                                                                                                                                               
AC_SUBST(pixmapsdir)

AC_ARG_ENABLE([epiphany-extension],
		[  --enable-epiphany-extension   Enable Epiphany Extension ],
		enable_epiphany_extension=$enableval,
		enable_epiphany_extension=yes)



AC_MSG_CHECKING([which epiphany to use])

EPHY_VER=
AC_ARG_WITH([epiphany-version],
        AC_HELP_STRING([--with-epiphany-version@<:@=1.4|1.6@:>@],
                       [Whether to use epiphany version 1.4 or 1.6 (default 1.4)]),
        [EPHY_VER="$withval"])

dnl try to autodetect Epiphany 1.2, 1.4 or 1.6
EPHY_AUTODETECT="(autodetect)"
if pkg-config --exists epiphany-1.2; then
        EPHY_VER=1.2
elif pkg-config --exists epiphany-1.4; then
	EPHY_VER=1.4
elif pkg-config --exists epiphany-1.6; then
        EPHY_VER=1.6
fi

EPIPHANY_REQUIRED=
EPIPHANY_PKGCONFIG=

if test $EPHY_VER = "1.2"; then
          AC_DEFINE_UNQUOTED(EPHY_VERSION, 12, [Define to the Epiphany version (12 or 14 or 16)])
          EPIPHANY_PKGCONFIG=epiphany-1.2
          EPIPHANY_REQUIRED=1.2.0
elif test $EPHY_VER = "1.4"; then
          AC_DEFINE_UNQUOTED(EPHY_VERSION, 14, [Define to the Epiphany version (12 or 14 or 16)])
          EPIPHANY_PKGCONFIG=epiphany-1.4
          EPIPHANY_REQUIRED=1.4.0
elif test $EPHY_VER = "1.6"; then
          AC_DEFINE_UNQUOTED(EPHY_VERSION, 16, [Define to the Epiphany version (12 or 14 or 16)])
          EPIPHANY_PKGCONFIG=epiphany-1.6
          EPIPHANY_REQUIRED=1.5.0
else
     	AC_MSG_RESULT([no epiphany installed])
fi

if test $EPHY_VER = "1.2" || test $EPHY_VER = "1.4" || test $EPHY_VER = "1.6"; then
AC_MSG_RESULT([$EPHY_VER $EPHY_AUTODETECT])

LIBGLIB_REQUIRED=2.4.0
LIBGTK_REQUIRED=2.4.0

AC_SUBST(EPIPHANY_REQUIRED)
AC_SUBST(LIBGLIB_REQUIRED)
AC_SUBST(LIBGTK_REQUIRED)

PKG_CHECK_MODULES(EPIPHANY_DEPENDENCY, \
                  glib-2.0 >= $LIBGLIB_REQUIRED \
                  gmodule-2.0 \
                  gtk+-2.0 >= $LIBGTK_REQUIRED \
                  $EPIPHANY_PKGCONFIG >= $EPIPHANY_REQUIRED)
AC_SUBST(EPIPHANY_DEPENDENCY_CFLAGS)
AC_SUBST(EPIPHANY_DEPENDENCY_LIBS)
else
	enable_epiphany_extension=no
fi

AM_CONDITIONAL(ENABLE_EPIPHANY_EXTENSION, test "x$enable_epiphany_extension" = "xyes")


dnl Stuff for the CORBA interface
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
AC_SUBST(ORBIT_IDL)
                                                                                                                                                              
LIBBONOBO_IDL="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
AC_SUBST(LIBBONOBO_IDL)
                                                                                                                                                              
BONOBO_ACTIVATION_IDL="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
AC_SUBST(BONOBO_ACTIVATION_IDL)

AC_OUTPUT([
Makefile
po/Makefile.in
include/Makefile
src/Makefile
pixmaps/Makefile
data/Makefile
gwget.desktop
epiphany-extension/Makefile
])

