## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gwget2_includedir = $(pkgincludedir)

gwget2_include_DATA = \
	main_window.h\
	main_window_cb.h\
	gwget_data.h\
	wget-log.h\
	utils.h\
	custom-cell-renderer-progressbar.h\
	new_window.h\
	eggtrayicon.h\
	systray.h

