## Process this file with automake to produce Makefile.in

gwget_pixmapsdir = $(datadir)/@PACKAGE@

gwget_pixmaps_DATA = \
	gwget.xpm \
	gwget.png\
	gwget-off.png\
	gwget-large.png \
	downloading.png \
	newdownload.png

EXTRA_DIST = $(gwget_pixmaps_DATA)

icondir = $(datadir)/pixmaps
icon_DATA = gwget.png
